# DA_project_2

./: CMakeLists.txt
basic/ranges/: ranges1.txt
basic/registers/: registers1.txt
html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  GraphBuilder_8cpp.html  GraphBuilder_8cpp__incl.dot  GraphBuilder_8h.html  GraphBuilder_8h__dep__incl.dot  GraphBuilder_8h__incl.dot  GraphBuilder_8h_source.html  GraphColoring_8cpp.html  GraphColoring_8cpp__incl.dot  GraphColoring_8h.html  GraphColoring_8h__dep__incl.dot  GraphColoring_8h__incl.dot  GraphColoring_8h_source.html  Graph_8h.html  Graph_8h__dep__incl.dot  Graph_8h__incl.dot  Graph_8h_source.html  LiveRange_8cpp.html  LiveRange_8cpp__incl.dot  LiveRange_8h.html  LiveRange_8h__dep__incl.dot  LiveRange_8h__incl.dot  LiveRange_8h_source.html  Menu_8cpp.html  Menu_8cpp__incl.dot  Menu_8h.html  Menu_8h__dep__incl.dot  Menu_8h__incl.dot  Menu_8h_source.html  Output_8cpp.html  Output_8cpp__incl.dot  Output_8h.html  Output_8h__dep__incl.dot  Output_8h__incl.dot  Output_8h_source.html  Parser_8cpp.html  Parser_8cpp__incl.dot  Parser_8h.html  Parser_8h__dep__incl.dot  (+67 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  (+48 more)
src/: GrafoBuilder.cpp  GrafoBuilder.h  Graph.h  GraphBuilder.cpp  GraphBuilder.h  GraphColoring.cpp  GraphColoring.h  LiveRange.cpp  LiveRange.h  Menu.cpp  Menu.h  Output.cpp  Output.h  Parser.cpp  Parser.h  Web.cpp  Web.h  alloc  main.cpp  output.cpp  output.h  output.txt  regalloc
